all component types are not successfully read from the database and are visualized with all their specifications